--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>HW13-image-finder</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+      <title>HW13-image-finder</title>
     
   </head>
 
   <body>
     <nav class="navbar sticky-top navbar-dark bg-dark">
-      <a class="navbar-brand pixabay-logo" href="https://pixabay.com/"><img src="./images/pixabay-seeklogo.com.svg" alt="pixabay-logo" class="logo" height="50"></a>
+      <a class="navbar-brand pixabay-logo" href="https://pixabay.com/"><img src="./images/pixabay-seeklogo.com.svg" alt="pixabay-logo" class="logo" height="50" loading="lazy"></a>
       <form class="form-inline search-form" id="search-form">
         
         <input class="form-control mr-sm-2" type="text" name="query" autocomplete="off" placeholder="Type some text here" aria-label="Search">
