сделал прелоадер для странички

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <div id="site-preloader">
+      <div class="animation-wrapper"><span class="preloader-animation"></span><br>Please wait<br><small>Content is loading</small></div>
+    </div>
     <nav class="navbar sticky-top navbar-dark bg-dark">
       <a class="navbar-brand pixabay-logo" href="https://pixabay.com/"><img src="./images/pixabay-seeklogo.com.svg" alt="pixabay-logo" class="logo" height="50" loading="lazy"></a>
       <form class="form-inline search-form" id="search-form">
